--- a/travel-app/package.json
+++ b/travel-app/package.json
@@ -2,6 +2,7 @@
   "name": "travel-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jisoo-s.github.io/WORLD-PROJECT",
   "dependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@testing-library/dom": "^10.4.1",
