--- a/travel-app/package.json
+++ b/travel-app/package.json
@@ -2,7 +2,6 @@
   "name": "travel-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jisoo-s.github.io/WORLD-PROJECT",
   "dependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@testing-library/dom": "^10.4.1",
@@ -17,6 +16,9 @@
     "react-scripts": "5.0.1",
     "tailwindcss": "^4.1.11",
     "web-vitals": "^2.1.4"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
