--- a/travel-app/public/manifest.json
+++ b/travel-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "World Travel",
+  "name": "World Travel Globe",
   "icons": [
     {
       "src": "favicon.ico",
