--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^4.1.11",
     "web-vitals": "^2.1.4"
