--- a/travel-app/package.json
+++ b/travel-app/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor/cli": "^7.4.3",
+    "@capacitor/core": "^7.4.3",
+    "@capacitor/ios": "^7.4.3",
     "@supabase/supabase-js": "^2.39.0",
     "@tailwindcss/forms": "^0.5.10",
     "@testing-library/dom": "^10.4.1",
@@ -14,8 +17,10 @@
     "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-globe.gl": "^2.36.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.1",
+    "three": "^0.180.0",
     "web-vitals": "^2.1.4"
   },
   "engines": {
